# crux

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
scripts/: build-release.sh  crux_entry.py
src/crux/: __init__.py  cli.py  config.py  queryclass.py  routes.py  surface.py  telemetry.py
tests/: conftest.py  test_cli.py  test_config.py  test_queryclass.py  test_routes.py  test_surface.py  test_telemetry.py
